tests/fixtures/valid/inline_dag_call_in_for/main.gcl
// Inline DAG invocation inside a `for` comprehension.
// The argument `@dist[r]` references the loop variable `r` from the
// enclosing scope — the key semantic divergence from top-level `include`.
pub index Region = { A, B };

dag id_len {
    param v: Length;

    pub node result: Length = @v;
}

param dist: Length[Region] = {
    Region.A: 1.0 m,
    Region.B: 2.0 m,
};

node distances: Length[Region] = for r: Region { @id_len(v: @dist[r]).result };
