tests/fixtures/invalid/inline_dag_call_cross_file_indexed/lib.gcl
pub index Region = { A, B };

pub dag doubler {
    param v: Length[Region];
    pub node result: Length[Region] = for r: Region { @v[r] * 2.0 };
}
